--- a/Data Analysis Homicide Reports.ipynb
+++ b/Data Analysis Homicide Reports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a reference to the file path\n",
-    "csv_path = \"Resources/homicide_reports_2000_2014.csv\""
+    "csv_path = \"Resources/Homicide_Reports.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -192,129 +192,9 @@
        "      <td>0</td>\n",
        "      <td>FBI</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>402438</td>\n",
-       "      <td>AK00101</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>Municipal Police</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>April</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Murder or Manslaughter</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Blunt Object</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>FBI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>402439</td>\n",
-       "      <td>AK00101</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>Municipal Police</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>April</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Murder or Manslaughter</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>39</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Stranger</td>\n",
-       "      <td>Rifle</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>FBI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>402440</td>\n",
-       "      <td>AK00101</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>Municipal Police</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>May</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Murder or Manslaughter</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>20</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Stranger</td>\n",
-       "      <td>Handgun</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>FBI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>402441</td>\n",
-       "      <td>AK00101</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>Municipal Police</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>June</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Murder or Manslaughter</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>20</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Acquaintance</td>\n",
-       "      <td>Blunt Object</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>FBI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>402442</td>\n",
-       "      <td>AK00101</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>Municipal Police</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>July</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Murder or Manslaughter</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Acquaintance</td>\n",
-       "      <td>Handgun</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>FBI</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 24 columns</p>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -324,11 +204,6 @@
        "2     402435     AK00101   Anchorage  Municipal Police  Anchorage  Alaska   \n",
        "3     402436     AK00101   Anchorage  Municipal Police  Anchorage  Alaska   \n",
        "4     402437     AK00101   Anchorage  Municipal Police  Anchorage  Alaska   \n",
-       "5     402438     AK00101   Anchorage  Municipal Police  Anchorage  Alaska   \n",
-       "6     402439     AK00101   Anchorage  Municipal Police  Anchorage  Alaska   \n",
-       "7     402440     AK00101   Anchorage  Municipal Police  Anchorage  Alaska   \n",
-       "8     402441     AK00101   Anchorage  Municipal Police  Anchorage  Alaska   \n",
-       "9     402442     AK00101   Anchorage  Municipal Police  Anchorage  Alaska   \n",
        "\n",
        "   Year     Month  Incident                  Crime Type  ... Victim Ethnicity  \\\n",
        "0  2000   January         1      Murder or Manslaughter  ...          Unknown   \n",
@@ -336,11 +211,6 @@
        "2  2000   January         3  Manslaughter by Negligence  ...          Unknown   \n",
        "3  2000  February         1  Manslaughter by Negligence  ...          Unknown   \n",
        "4  2000     March         1      Murder or Manslaughter  ...          Unknown   \n",
-       "5  2000     April         1      Murder or Manslaughter  ...          Unknown   \n",
-       "6  2000     April         2      Murder or Manslaughter  ...          Unknown   \n",
-       "7  2000       May         1      Murder or Manslaughter  ...          Unknown   \n",
-       "8  2000      June         1      Murder or Manslaughter  ...          Unknown   \n",
-       "9  2000      July         1      Murder or Manslaughter  ...          Unknown   \n",
        "\n",
        "  Perpetrator Sex  Perpetrator Age               Perpetrator Race  \\\n",
        "0            Male               28                          Black   \n",
@@ -348,11 +218,6 @@
        "2            Male               12         Asian/Pacific Islander   \n",
        "3          Female               39         Asian/Pacific Islander   \n",
        "4         Unknown                0                        Unknown   \n",
-       "5         Unknown                0                        Unknown   \n",
-       "6            Male               39                          White   \n",
-       "7            Male               20                          White   \n",
-       "8            Male               20                          White   \n",
-       "9            Male               21                          Black   \n",
        "\n",
        "  Perpetrator Ethnicity  Relationship        Weapon Victim Count  \\\n",
        "0               Unknown          Wife       Handgun            0   \n",
@@ -360,11 +225,6 @@
        "2               Unknown        Family  Blunt Object            0   \n",
        "3               Unknown  Acquaintance  Blunt Object            0   \n",
        "4               Unknown       Unknown         Knife            0   \n",
-       "5               Unknown       Unknown  Blunt Object            0   \n",
-       "6               Unknown      Stranger         Rifle            0   \n",
-       "7               Unknown      Stranger       Handgun            0   \n",
-       "8               Unknown  Acquaintance  Blunt Object            0   \n",
-       "9               Unknown  Acquaintance       Handgun            0   \n",
        "\n",
        "  Perpetrator Count Record Source  \n",
        "0                 0           FBI  \n",
@@ -372,16 +232,11 @@
        "2                 0           FBI  \n",
        "3                 0           FBI  \n",
        "4                 0           FBI  \n",
-       "5                 0           FBI  \n",
-       "6                 2           FBI  \n",
-       "7                 4           FBI  \n",
-       "8                 0           FBI  \n",
-       "9                 0           FBI  \n",
        "\n",
-       "[10 rows x 24 columns]"
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,12 +246,12 @@
     "datasource_df = pd.read_csv(csv_path)\n",
     "\n",
     "# Print the first five rows of data to the screen\n",
-    "datasource_df.head(10)"
+    "datasource_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +423,7 @@
        "4                        Unknown       Unknown         Knife  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +474,7 @@
        "Name: Relationship, dtype: int64"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +658,7 @@
        "4                        Unknown       Unknown         Knife  "
       ]
      },
-     "execution_count": 157,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,49 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unknown                 119525\n",
-       "Acquaintance             35111\n",
-       "Stranger                 32758\n",
-       "Family                   17345\n",
-       "Wife                      8497\n",
-       "Girlfriend                7183\n",
-       "Friend                    6095\n",
-       "Boyfriend                 2398\n",
-       "Husband                   1777\n",
-       "Neighbor                  1759\n",
-       "Ex-Wife                    675\n",
-       "Common-Law Wife            621\n",
-       "Stepson                    433\n",
-       "Stepfather                 423\n",
-       "Boyfriend/Girlfriend       377\n",
-       "Stepdaughter               309\n",
-       "Common-Law Husband         236\n",
-       "Employer                   174\n",
-       "Ex-Husband                 136\n",
-       "Employee                   122\n",
-       "Stepmother                  68\n",
-       "Name: Relationship, dtype: int64"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check to see if you comnbined similar Family correctly in \"Relationship\".\n",
-    "clean_data_df[\"Relationship\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -877,12 +690,13 @@
        "Name: Relationship, dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "# Combining similar datasets: Friend, Romantic Relationship, Step-family and Coworker together\n",
     "clean_data_df = clean_data_df.replace(\n",
     "    {\"Acquaintance\": \"Friend\", \"Stepmother\": \"Step-Family\", \"Stepbrother\": \"Step-Family\", \"Stepdaughter\": \"Step-Family\", \n",
@@ -895,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1069,7 +883,7 @@
        "4                        Unknown      Unknown         Knife  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +894,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Handgun          116205\n",
+      "Knife             29118\n",
+      "Firearm           28077\n",
+      "Blunt Object      23945\n",
+      "Unknown           16190\n",
+      "Shotgun            7186\n",
+      "Rifle              6874\n",
+      "Strangulation      1905\n",
+      "Fire               1776\n",
+      "Suffocation        1638\n",
+      "Gun                1495\n",
+      "Drugs               981\n",
+      "Drowning            319\n",
+      "Poison              184\n",
+      "Explosives           82\n",
+      "Fall                 47\n",
+      "Name: Weapon, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(clean_data_df[\"Weapon\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combining similar datasets: Friend, Romantic Relationship, Step-family and Coworker together\n",
+    "clean_data_df = clean_data_df.replace(\n",
+    "    {\"Handgun\": \"Firearm\", \"Shotgun\": \"Firearm\", \"Rifle\": \"Firearm\", \"Gun\": \"Firearm\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Firearm          159837\n",
+      "Knife             29118\n",
+      "Blunt Object      23945\n",
+      "Unknown           16190\n",
+      "Strangulation      1905\n",
+      "Fire               1776\n",
+      "Suffocation        1638\n",
+      "Drugs               981\n",
+      "Drowning            319\n",
+      "Poison              184\n",
+      "Explosives           82\n",
+      "Fall                 47\n",
+      "Name: Weapon, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(clean_data_df[\"Weapon\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,13 +975,6 @@
     "clean_data_df.to_csv(\"Output/clean_data.csv\",\n",
     "                  encoding=\"utf-8\", index=False, header=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
