--- a/Data Analysis Homicide Reports.ipynb
+++ b/Data Analysis Homicide Reports.ipynb
@@ -974,9 +974,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:PythonData]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-PythonData-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -988,7 +988,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
