project1_kubootcamp_kbb

--- a/Final Homicide Analysis-KBB.ipynb
+++ b/Final Homicide Analysis-KBB.ipynb
@@ -1,6 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summer 2019 Project 1\n",
+    "\n",
+    "## Analysis of Homicide Reports 1980-2014\n",
+    "\n",
+    "## Group Members:\n",
+    "- Brittany Alvaro\n",
+    "- Kenny Cutler\n",
+    "- Bamrot Abebe\n",
+    "\n",
+    "#### June 5, 2019\n",
+    "\n",
+    "# Project Description\n",
+    "#### Our goal is to explore homicides in the US between years 2000-2014 through self-explanatory tables and graphs to answer and check our questions. \n",
+    "#### We will answer the following questions:\n",
+    "- How many crimes were solved/unsolved?\n",
+    "- Which gender participates more in homicides?\n",
+    "- Which weapons are more popular in homicides?\n",
+    "- Which year had the most homicides?\n",
+    "- Is weapon choice dependent on perpetrator sex?\n",
+    "- Which state had the most homicides?\n",
+    "\n",
+    "# Core Message\n",
+    "#### Are there trends in homicides occurring in the United States?\n",
+    "\n",
+    "# Dataset\n",
+    "#### We obtained our raw data csv through kaggle.\n",
+    "The dataset was very large. In total, there are 638,454 instances of reported homicides. We decided to clean that data and decrease the amount of data according to year of occurrence (2000-2014). The dataset is part of the Murder Accountability Project, Which is a nonprofit organization established in 2015  to educate American on the importance of accurately accounting for unsolved homicides with the United States. \n",
+    "\n",
+    "# Data Cleanup\n",
+    "- We edited the original csv in excel and eliminated 1980-1999 columns, saved that file and imported the csv.\n",
+    "- We removed columns: Agency Name, Agency Type, Victim Ethnicity, Perpetrator Ethnicity, Victim Count, Perpetrator Count, and Record Source”. We then checked if there were similar values in Relationship and Weapon, then combined those similar values with each other. The data cleanup is in a separate file called \"Data Analysis Homicide Reports\"\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -1583,7 +1621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pie Charts"
+    "# Pie Charts for variables"
    ]
   },
   {
@@ -1744,7 +1782,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
